--- a/jira-work-log/Modules/Board/View/IssueTableViewCell.xib
+++ b/jira-work-log/Modules/Board/View/IssueTableViewCell.xib
@@ -6,20 +6,100 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IssueTableViewCell" id="KGk-i7-Jjw" customClass="IssueTableViewCell" customModule="jira_work_log" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IssueTableViewCell" rowHeight="89" id="KGk-i7-Jjw" customClass="IssueTableViewCell" customModule="jira_work_log" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="363" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="363" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Anh-8o-jGy" customClass="ViewWithBorderRoundCorner" customModule="jira_work_log" customModuleProvider="target">
+                        <rect key="frame" x="10" y="10" width="343" height="69.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nVu-D9-6lw">
+                                <rect key="frame" x="40" y="24.5" width="73" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LTG-fH-eWk">
+                                <rect key="frame" x="10" y="25" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="T2S-h5-MHE"/>
+                                    <constraint firstAttribute="width" constant="20" id="t4f-h4-Yp6"/>
+                                </constraints>
+                            </imageView>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xzh-nv-b3L" customClass="ViewWithBorderRoundCorner" customModule="jira_work_log" customModuleProvider="target">
+                                <rect key="frame" x="283" y="5" width="55" height="25"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iok-JK-Wav">
+                                        <rect key="frame" x="18.5" y="4.5" width="18" height="16"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="IssueColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="9DP-Aw-wYe"/>
+                                    <constraint firstAttribute="width" constant="55" id="Dbg-D1-RA8"/>
+                                    <constraint firstItem="Iok-JK-Wav" firstAttribute="centerX" secondItem="Xzh-nv-b3L" secondAttribute="centerX" id="fbE-PY-vjB"/>
+                                    <constraint firstItem="Iok-JK-Wav" firstAttribute="centerY" secondItem="Xzh-nv-b3L" secondAttribute="centerY" id="hJz-SB-gUr"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="colorBorder">
+                                        <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="0.20000000000000001"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nVu-D9-6lw" firstAttribute="centerY" secondItem="Anh-8o-jGy" secondAttribute="centerY" id="0GX-Y0-9BY"/>
+                            <constraint firstItem="Xzh-nv-b3L" firstAttribute="top" secondItem="Anh-8o-jGy" secondAttribute="top" constant="5" id="RGe-p8-zE8"/>
+                            <constraint firstItem="LTG-fH-eWk" firstAttribute="leading" secondItem="Anh-8o-jGy" secondAttribute="leading" constant="10" id="Yqh-i1-1PQ"/>
+                            <constraint firstItem="nVu-D9-6lw" firstAttribute="leading" secondItem="LTG-fH-eWk" secondAttribute="trailing" constant="10" id="cyU-Ma-5wL"/>
+                            <constraint firstAttribute="trailing" secondItem="Xzh-nv-b3L" secondAttribute="trailing" constant="5" id="dfU-KO-W72"/>
+                            <constraint firstItem="Xzh-nv-b3L" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nVu-D9-6lw" secondAttribute="trailing" constant="10" id="pMR-qW-3e4"/>
+                            <constraint firstItem="LTG-fH-eWk" firstAttribute="centerY" secondItem="Anh-8o-jGy" secondAttribute="centerY" id="uF8-fw-ibn"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="colorBorder">
+                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="Anh-8o-jGy" secondAttribute="trailing" constant="10" id="JcZ-CQ-b55"/>
+                    <constraint firstItem="Anh-8o-jGy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="WOL-D8-Hea"/>
+                    <constraint firstItem="Anh-8o-jGy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="kUB-CY-59F"/>
+                    <constraint firstAttribute="bottom" secondItem="Anh-8o-jGy" secondAttribute="bottom" constant="10" id="y40-2R-g7u"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="imageViewIcon" destination="LTG-fH-eWk" id="adh-uK-BUr"/>
+                <outlet property="labelSummary" destination="nVu-D9-6lw" id="nj1-iL-JSg"/>
+                <outlet property="labelhours" destination="Iok-JK-Wav" id="Gpi-kM-d42"/>
+                <outlet property="viewBackground" destination="Xzh-nv-b3L" id="5Me-UD-iMV"/>
+            </connections>
+            <point key="canvasLocation" x="-282" y="81"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="IssueColor">
+            <color red="0.38823529411764707" green="0.72941176470588232" blue="0.23529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
