--- a/jira-work-log/Modules/Board/View/IssueTableViewCell.xib
+++ b/jira-work-log/Modules/Board/View/IssueTableViewCell.xib
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IssueTableViewCell" rowHeight="89" id="KGk-i7-Jjw" customClass="IssueTableViewCell" customModule="jira_work_log" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="IssueTableViewCell" rowHeight="89" id="KGk-i7-Jjw" customClass="IssueTableViewCell" customModule="jira_work_log" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="363" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -36,7 +36,7 @@
                                     <constraint firstAttribute="width" constant="20" id="t4f-h4-Yp6"/>
                                 </constraints>
                             </imageView>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xzh-nv-b3L" customClass="ViewWithBorderRoundCorner" customModule="jira_work_log" customModuleProvider="target">
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xzh-nv-b3L" customClass="ViewWithBorderRoundCorner" customModule="jira_work_log" customModuleProvider="target">
                                 <rect key="frame" x="283" y="5" width="55" height="25"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iok-JK-Wav">
