--- a/jira-work-log/Modules/ListBoards/View/ListBoardsStoryboard.storyboard
+++ b/jira-work-log/Modules/ListBoards/View/ListBoardsStoryboard.storyboard
@@ -11,10 +11,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--List Sprints View Controller-->
+        <!--List Boards View Controller-->
         <scene sceneID="gR9-zH-Sd3">
             <objects>
-                <viewController storyboardIdentifier="ListSprintsViewController" id="eEA-4H-Jms" customClass="ListSprintsViewController" customModule="jira_work_log" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ListBoardsViewController" id="eEA-4H-Jms" customClass="ListBoardsViewController" customModule="jira_work_log" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YI6-Vs-JWA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
