--- a/jira-work-log/Modules/Settings/View/SettingsStoryboard.storyboard
+++ b/jira-work-log/Modules/Settings/View/SettingsStoryboard.storyboard
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,11 +11,11 @@
             <objects>
                 <viewController storyboardIdentifier="SettingsViewController" id="rMJ-Eg-Okp" customClass="SettingsViewController" customModule="jira_work_log" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eJB-gq-lNk">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="BKp-uv-vmf">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Settings" id="Vs0-Il-zYx">
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="bOU-Rf-Lut">
@@ -31,16 +27,16 @@
                                 </items>
                             </navigationBar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1YR-K2-1zc" customClass="ViewWithBorderRoundCorner" customModule="jira_work_log" customModuleProvider="target">
-                                <rect key="frame" x="20" y="84" width="335" height="563"/>
+                                <rect key="frame" x="20" y="84" width="560" height="496"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Jes-TN-vcQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="360"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="360"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eog-0t-n2A">
-                                                <rect key="frame" x="0.0" y="0.0" width="335" height="120"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="560" height="120"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n8D-76-qbJ">
-                                                        <rect key="frame" x="25" y="45" width="285" height="30"/>
+                                                        <rect key="frame" x="25" y="45" width="510" height="30"/>
                                                         <gestureRecognizers/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -68,10 +64,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GNf-z4-W8W">
-                                                <rect key="frame" x="0.0" y="120" width="335" height="120"/>
+                                                <rect key="frame" x="0.0" y="120" width="560" height="120"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KbN-iL-jQm">
-                                                        <rect key="frame" x="25" y="45" width="285" height="30"/>
+                                                        <rect key="frame" x="25" y="45" width="510" height="30"/>
                                                         <gestureRecognizers/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -98,10 +94,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lgh-Lb-mWB">
-                                                <rect key="frame" x="0.0" y="240" width="335" height="120"/>
+                                                <rect key="frame" x="0.0" y="240" width="560" height="120"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dlO-GJ-Gjo">
-                                                        <rect key="frame" x="25" y="45" width="285" height="30"/>
+                                                        <rect key="frame" x="25" y="45" width="510" height="30"/>
                                                         <gestureRecognizers/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -110,8 +106,8 @@
                                                             <outletCollection property="gestureRecognizers" destination="oax-kg-Fbw" appends="YES" id="YcG-9D-LsI"/>
                                                         </connections>
                                                     </textField>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sprint:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iw8-Ia-MzA">
-                                                        <rect key="frame" x="25" y="14.5" width="114.5" height="20.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a board:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iw8-Ia-MzA">
+                                                        <rect key="frame" x="25" y="14.5" width="115.5" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -174,7 +170,7 @@
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="oax-kg-Fbw" userLabel="TapGestureRecognizerSprint">
                     <connections>
-                        <action selector="selectTapSelectSprint:" destination="rMJ-Eg-Okp" id="zPt-p6-uP1"/>
+                        <action selector="selectTapSelectboard:" destination="rMJ-Eg-Okp" id="zPt-p6-uP1"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
