--- a/jira-work-log/Modules/Settings/View/SettingsStoryboard.storyboard
+++ b/jira-work-log/Modules/Settings/View/SettingsStoryboard.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,11 +15,11 @@
             <objects>
                 <viewController storyboardIdentifier="SettingsViewController" id="rMJ-Eg-Okp" customClass="SettingsViewController" customModule="jira_work_log" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eJB-gq-lNk">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="BKp-uv-vmf">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Settings" id="Vs0-Il-zYx">
                                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="bOU-Rf-Lut">
@@ -27,16 +31,16 @@
                                 </items>
                             </navigationBar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1YR-K2-1zc" customClass="ViewWithBorderRoundCorner" customModule="jira_work_log" customModuleProvider="target">
-                                <rect key="frame" x="20" y="84" width="560" height="496"/>
+                                <rect key="frame" x="20" y="84" width="335" height="563"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Jes-TN-vcQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="560" height="360"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="360"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eog-0t-n2A">
-                                                <rect key="frame" x="0.0" y="0.0" width="560" height="120"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="335" height="120"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n8D-76-qbJ">
-                                                        <rect key="frame" x="25" y="45" width="510" height="30"/>
+                                                        <rect key="frame" x="25" y="45" width="285" height="30"/>
                                                         <gestureRecognizers/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -64,10 +68,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GNf-z4-W8W">
-                                                <rect key="frame" x="0.0" y="120" width="560" height="120"/>
+                                                <rect key="frame" x="0.0" y="120" width="335" height="120"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KbN-iL-jQm">
-                                                        <rect key="frame" x="25" y="45" width="510" height="30"/>
+                                                        <rect key="frame" x="25" y="45" width="285" height="30"/>
                                                         <gestureRecognizers/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -94,16 +98,16 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lgh-Lb-mWB">
-                                                <rect key="frame" x="0.0" y="240" width="560" height="120"/>
+                                                <rect key="frame" x="0.0" y="240" width="335" height="120"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dlO-GJ-Gjo">
-                                                        <rect key="frame" x="25" y="45" width="510" height="30"/>
+                                                        <rect key="frame" x="25" y="45" width="285" height="30"/>
                                                         <gestureRecognizers/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                         <connections>
-                                                            <outletCollection property="gestureRecognizers" destination="oax-kg-Fbw" appends="YES" id="YcG-9D-LsI"/>
+                                                            <outletCollection property="gestureRecognizers" destination="oax-kg-Fbw" appends="YES" id="MYd-vk-TTJ"/>
                                                         </connections>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a board:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iw8-Ia-MzA">
@@ -152,8 +156,8 @@
                         <viewLayoutGuide key="safeArea" id="qTa-FJ-knl"/>
                     </view>
                     <connections>
+                        <outlet property="textFieldBoard" destination="dlO-GJ-Gjo" id="kwH-XN-HkQ"/>
                         <outlet property="textFieldProject" destination="n8D-76-qbJ" id="g16-cv-OtJ"/>
-                        <outlet property="textFieldSprint" destination="dlO-GJ-Gjo" id="Ow9-gL-KZ3"/>
                         <outlet property="textFieldVersion" destination="KbN-iL-jQm" id="qSq-X1-oOo"/>
                     </connections>
                 </viewController>
@@ -168,9 +172,9 @@
                         <action selector="selectTapSelectVersion:" destination="rMJ-Eg-Okp" id="ER3-nT-TvB"/>
                     </connections>
                 </tapGestureRecognizer>
-                <tapGestureRecognizer id="oax-kg-Fbw" userLabel="TapGestureRecognizerSprint">
+                <tapGestureRecognizer id="oax-kg-Fbw" userLabel="TapGestureRecognizerBoard">
                     <connections>
-                        <action selector="selectTapSelectboard:" destination="rMJ-Eg-Okp" id="zPt-p6-uP1"/>
+                        <action selector="selectTapSelectBoard:" destination="rMJ-Eg-Okp" id="Okx-fk-ZkX"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
